kubernetes/greeting-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: greeting-rust
spec:
    selector:
        matchLabels:
            app: greeting-rust
    template:
        metadata:
            labels:
                app: greeting-rust
        spec:
            containers:
                -   name: greeting-rust
                    image: arnecdn/greeting-rust:0.1
                    imagePullPolicy: IfNotPresent
                    resources:
                        requests:
                            memory: "8Mi"
                            cpu: "1m"
                        limits:
                            cpu: "2m"
                            memory: "16Mi"
                    ports:
                        -   containerPort: 8080
                    command:
                              - "/usr/bin/server"


---
apiVersion: v1
kind: Service
metadata:
    name: greeting-rust
spec:
    ports:
        - port: 8080
    selector:
        app: greeting-rust
