kubernetes/kafka-connect.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: kafka-connect
    name: kafka-connect-service
spec:
    ports:
        - name: kafka-connect-port1
          port: 8083
          protocol: TCP
          targetPort: 8083
    selector:
        app: kafka-connect
#    clusterIP: None
#    type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: kafka-connect
    name: kafka-connect
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kafka-connect
    template:
        metadata:
            labels:
                app: kafka-connect
        spec:
            containers:
               - image: confluentinc/cp-kafka-connect:latest
                 imagePullPolicy: IfNotPresent
                 name: kafka-connect
                 ports:
                     - containerPort: 8083
#---
#apiVersion: platform.confluent.io/v1beta1
#kind: Connect
##metadata:
##    annotations:
##        platform.confluent.io/confluent-hub-install-extra-args:
#spec:
#    build:
#        type: onDemand
#        nDemand:
#            plugins:
#                confluentHub:
#                - name: debezium/debezium-connector-postgresql
#                  owner: Debezium Community
#                  version: 2.2.1
#            storageLimit:
