kubernetes/kafka-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: zookeeper-service
    name: zookeeper-service
spec:
    type: NodePort
    ports:
        - name: zookeeper-port
          port: 2181
          nodePort: 30181
          targetPort: 2181
    selector:
        app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: zookeeper
    name: zookeeper
spec:
    replicas: 1
    selector:
        matchLabels:
            app: zookeeper
    template:
        metadata:
            labels:
                app: zookeeper
        spec:
            containers:
                - name: zookeeper
                  image: confluentinc/cp-zookeeper:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                   - containerPort: 2181
