kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: kafka-app
    name: kafka-service
spec:
    ports:
        - name: kafka-port1
          port: 9092
          protocol: TCP
          targetPort: 9092
        - name: kafka-port2
          port: 9093
          protocol: TCP
          targetPort: 9093
    selector:
        app: kafka-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: kafka-app
    name: kafka

spec:
    serviceName: kafka-service
    replicas: 1
    selector:
        matchLabels:
            app: kafka-app
    template:
        metadata:
            labels:
                app: kafka-app
        spec:
            containers:
               - image: docker.io/confluentinc/confluent-local:7.5.0
                 imagePullPolicy: IfNotPresent
                 name: kafka
                 ports:
                     - containerPort: 29092
                     - containerPort: 9092
                     - containerPort: 9093
