kubernetes/postgres-greeting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-greeting
spec:
    selector:
        matchLabels:
            app: postgres-greeting
    template:
        metadata:
            labels:
                app: postgres-greeting
        spec:
            containers:
                -   name: postgres-greeting
                    image: postgres:latest
                    ports:
                        -   containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
    name: postgres-greeting
spec:
    ports:
        - port: 5432
    selector:
        app: postgres-greeting
