kubernetes/greeting-distributor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: greeting-distributor
spec:
    replicas: 1
    selector:
        matchLabels:
            app: greeting-distributor
    template:
        metadata:
            labels:
                app: greeting-distributor
        spec:
            containers:
                -   name: greeting-distributor
                    image: arnecdn/greeting-distributor:0.1
                    imagePullPolicy: IfNotPresent
                    resources:
                        requests:
                            memory: "8Mi"
                            cpu: "10m"
                        limits:
                            cpu: "500m"
                            memory: "16Mi"
                    ports:
                        -   containerPort: 8080
                    command:
                              - "/usr/bin/server"


---
apiVersion: v1
kind: Service
metadata:
    name: greeting-distributor-service
spec:
    ports:
        - port: 8080
          targetPort: 8080
#          nodePort: 32002
    selector:
        app: greeting-distributor
    type: LoadBalancer
#    externalIPs:
#      - 192.168.64.2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-distributor-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: greeting-distributor.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greeting-distributor-service
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: greeting-distributor-network-policy
spec:
  podSelector:
    matchLabels:
      app: greeting-distributor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
